# nsb

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  _CMakePresets.json  gen.sh  gen_clang.sh  mainConfig.h.in
app/: CMakeLists.txt  main.cpp
cpp_russia/1_StorageProxy/: StorageProxy.h  StorageProxy_tests.cpp  StorageProxy_tests.h
docs/: building.md
ext_exercises/: CMakeLists.txt
ext_exercises/concurrency_cpp/: CMakeLists.txt  main.cpp  unit_2.h
ext_exercises/concurrency_cpp/concurrency/: JThread.h  ThreadGuard.cpp  ThreadGuard.h
ext_exercises/cpp_russia/: CMakeLists.txt  main.cpp
ext_exercises/cpp_russia/1_StorageProxy/: StorageProxy_tests.cpp
ext_exercises/effective_cpp/: CMakeLists.txt  main.cpp  unit_1.h
ext_exercises/notes/: CMakeLists.txt  main.cpp
ext_exercises/notes/Factory/: Factory.cpp  Factory.h
ext_exercises/notes/Pimpl/: Pimpl.cpp  Pimpl.h
ext_libs/prepare/: build_libs.sh  linux.sh
libs/: CMakeLists.txt  main.cpp  predef.h  type_traits.h  utility.h
libs/NsbVector/: NsbVector.cpp  NsbVector.h
libs/StateMachine/: StateMachine.hpp  StateMachine_impl.hpp
libs/TaskManager/: TaskManager.h  TaskManager.hpp  TaskManager.md  TaskManagerAsio.cpp  TaskManagerAsio.h  TaskManagerAsio.hpp
libs/caches/: caches.h  caches.hpp
libs/containers/: Array.h  Array.hpp  iterator.h
libs/libs_testing/: main.cpp  predef_test.cpp  type_traits_test.cpp  utility_test.cpp  utility_test.h
libs/libs_testing/StateMachine/: StateMachine_test.cpp
libs/libs_testing/TaskManager/: TaskManagerAsio_test.cpp
libs/libs_testing/caches/: caches_test.cpp
libs/libs_testing/containers/: Array_test.cpp  iterator_test.cpp
libs/libs_testing/numeric/: reduce_test.cpp
libs/numeric/: reduce.h  reduce.hpp
notes/: CMakeLists.txt  NoteHelpers.h  main.cpp
notes/Boost/: Boost.cpp  Boost.h
notes/Boost/Asio/: Asio.cpp  Asio.h  Daytime.h
notes/Boost/Asio/Tcp/: AsyncDaytimeServerTcp.cpp  AsyncDaytimeServerTcp.h  SyncDaytimeClientTcp.cpp  SyncDaytimeClientTcp.h  SyncDaytimeServerTcp.cpp  SyncDaytimeServerTcp.h
notes/Boost/Asio/Timers/: Timers.cpp  Timers.h
notes/Boost/Asio/Udp/: AsyncDaytimeServerUdp.cpp  AsyncDaytimeServerUdp.h  SyncDaytimeClientUdp.cpp  SyncDaytimeClientUdp.h  SyncDaytimeServerUdp.cpp  SyncDaytimeServerUdp.h
notes/Boost/ProgramOptions/: ProgramOptions.cpp  ProgramOptions.h  config.cfg
notes/Boost/Spirit/: Spirit.cpp  Spirit.h
notes/CountingInString/: CountingInString.cpp  CountingInString.h
notes/Factory/: Factory.cpp
notes/FindAndReplace/: FindAndReplace.cpp  FindAndReplace.h
notes/Pimpl/: Pimpl.cpp
notes/Ranges/: RangesTest.cpp  RangesTest.h
notes/ScopeExit/: ScopeExit.cpp  ScopeExit.h
notes/SimpleAny/: SimpleAny.cpp  SimpleAny.h
notes/TemplateTest/: TemplateTest.cpp  TemplateTest.h
notes/Transformations/: Transformations.cpp  Transformations.h
